--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "node --watch --env-file=.env src/index.js",
-    "deploy": "node src/index.js"
+    "dev": "node --watch --env-file=.env index.js",
+    "deploy": "node index.js"
   },
   "keywords": [],
   "author": "",
